Increased section padding to avoid nav overlapping content during navigation

--- a/src/styles/about-us.module.scss
+++ b/src/styles/about-us.module.scss
@@ -3,7 +3,7 @@ $logo-orange-1: #ea9b58;
 .container {
   max-width: 120rem;
   margin: 0 auto;
-  padding: 8rem 0;
+  padding: 12.8rem 0;
 }
 
 .about-heading {
