--- a/src/styles/gallery.module.scss
+++ b/src/styles/gallery.module.scss
@@ -2,6 +2,7 @@ $logo-orange-1: #ea9b58;
 
 .container {
   margin-top: 8rem;
+  padding-top: 12.8rem;
 }
 
 .dishes-showcase {
