--- a/src/styles/menu-section.module.scss
+++ b/src/styles/menu-section.module.scss
@@ -4,7 +4,7 @@ $logo-green-shade-1: #3d570e;
 .container {
   max-width: 120rem;
   margin: 0 auto;
-  padding-top: 8rem;
+  padding-top: 12.8rem;
 }
 
 .menu-heading {
