--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -54,7 +54,6 @@ $logo-orange-1: #ea9b58;
 .scrolled .nav-btn:link,
 .scrolled .nav-btn:visited {
   color: #424242;
-  margin-bottom: 12.8rem;
 }
 
 .scrolled .logo-img-hero {
